c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/initializers/initialize_struct_with_scalar.c
int main(void) {
    struct pair {
        int x;
        int y;
    };

    // you can't initialize a struct with a scalar expression
    struct pair p = 1;
}